--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ Werkzeug==2.0.0
 wrapt==1.11.1
 Flask-Cors==3.0.8
 SQLAlchemy==1.4.41
+python-dotenv==0.21.1
+Flask-Migrate==2.5.0
+psycopg2-binary==2.8.2
